Criando projetos Services e Repositories

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@
 /src/EnglishNow.Web/bin
 /src/EnglishNow.Web/obj
 /src/EnglishNow.Web/EnglishNow.Web.csproj.user
+/src/EnglishNow.Repositories/bin
+/src/EnglishNow.Repositories/obj
+/src/EnglishNow.Services/bin
+/src/EnglishNow.Services/obj
